# Collabonate-SideProject

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  newnew.py  news_information.csv  news_information.txt  politics.py  politics1.py  politics_revise.py  pyproject.toml  requirements.dev.txt  requirements.txt  scraped_news.csv  scraped_urls.txt  scrapping_code.py  web_scraping.py  world_scraping.py  데모.py
dataAnalysis/: Data_Analysis.py  preDataAnalysis.py
keywordnews/: manage.py  scrapping_code.py  test.py
output/: 2024-06-26_103030_정치_국방외교.csv  2024-06-26_103030_정치_국회정당.csv  2024-06-26_103030_정치_대통령실.csv  2024-06-26_103030_정치_행정.csv  2024-06-26_104054_정치_국방외교.csv  2024-06-26_104054_정치_국회정당.csv  2024-06-26_104054_정치_북한.csv  2024-06-26_104054_정치_정치일반.csv  2024-06-26_104054_정치_행정.csv  2024-06-26_112940_정치_국회정당.csv  2024-06-26_112940_정치_대통령실.csv  2024-06-26_131351_정치_국방외교.csv  2024-06-26_131351_정치_대통령실.csv  2024-06-26_131351_정치_행정.csv  2024-06-26_133448_랭킹.csv  2024-06-26_133550_정치_대통령실.csv  2024-06-26_133550_정치_북한.csv  2024-06-26_133550_정치_정치일반.csv  2024-06-26_133550_정치_행정.csv  2024-06-26_140506_정치_국회정당.csv  2024-06-26_142320_정치_국회정당.csv  2024-06-26_142320_정치_대통령실.csv  2024-06-26_142320_정치_북한.csv  2024-06-26_145425_정치_국회정당.csv  2024-06-26_145425_정치_대통령실.csv  2024-06-26_145425_정치_북한.csv  2024-06-26_145425_정치_행정.csv  2024-06-26_153313_정치_국방 외교.csv  2024-06-26_153313_정치_대통령실.csv  2024-06-26_153313_정치_정치일반.csv  2024-06-26_153313_정치_행정.csv  2024-06-26_170946_정치_국방 외교.csv  2024-06-26_170946_정치_대통령실.csv  2024-06-26_170946_정치_정치일반.csv  (+7 more)
(+569 files in other folders)
