[tool.poetry]
name = "keywordnews"
version = "0.1.0"
description = ""
authors = ["JoonHoSeong <joonho1366@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
django = "^5.0.6"
flask = "^3.0.3"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
bs4 = "^0.0.2"
pandas = "^2.2.2"
playwright = "^1.44.0"
black = "^24.4.2"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile="black"


[tool.django-stubs]
django_settings_module = "djangoProject.settings"